# NovaStella

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  download_deps.bat  vcpkg.json
.github/workflows/: ci-release.yml
Includes/: init.hpp  logger.hpp  logger.ipp  vulkan-init.hpp
cmake/: novastella.sh.in
src/: main-old.cpp  main.cpp  play.cpp  vulkan-init.cpp
